--- a/templates/weather.html
+++ b/templates/weather.html
@@ -1,262 +1,256 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Weather Information</title>
-  <!-- Import Materialize CSS -->
-  <link href="{{ url_for('static', filename='materialize.min.css') }}" rel="stylesheet" />
-
-  <style>
-    .input-field > label {
-      position: relative;
-    }
-
-    .collection .collection-item {
-      background-color: #43346ff7;
-      color: #f0f0f8;
-      display: flex;
-      align-items: center;
-      align-content: center;
-      flex-wrap: wrap;
-      border-bottom: 0;
-      padding: 10px 20px;
-      background: linear-gradient(90deg, hsl(222 23% 43% / 1), hsl(237 19% 47% / 1));
-    }
-
-    /* Grid styles for weather information */
-    .weather-grid {
-        display: grid;
-        grid-template-columns: repeat(2, 1fr); /* Three columns with equal width */
-        gap: 2rem; /* Gap between grid items */
-        list-style-type: none; /* Remove default list styling */
-        padding-left: 0; /* Remove default padding */
-    }
-    
-    .weather-grid li {
-        padding: 7px; /* Padding for each grid item */
-        border: solid 1.3px hsl(153deg 100% 53% / 47%);
-        border-radius: 5%;
-    }
-
-
-    .collection {
-      border: 1.5px solid hsl(229 73% 67% / 1);
-      border-radius: 23px;
-    }
-/*
-    .collection .collection-item ul{
-      display: grid;
-      grid-template-columns: repeat(3, 1fr); /* Three columns with equal width */
-      /*gap: 2rem;
-/*    }*/
-
-
-    .center-align {
-      padding-bottom: 1rem;
-    }
-
-    .center-align > a, .center-align > #fc {
-      border-radius: 17px;
-      background: #058f8c;
-      box-shadow: inset 9.61px 9.61px 16px #047471, inset -9.61px -9.61px 16px #06aaa7;
-    }
-
-    html {
-      color: hsl(248 57% 97% / 1);
-      background: linear-gradient(270deg, hsl(222 23% 43% / 1), hsl(237 19% 47% / 1));
-    }
-
-    .weather-icon {
-      width: 73px;
-      height: auto;
-    }
-
-    .collection-item:last-child {
-      padding-bottom: 1.5rem;
-    }
-
-    .collection-item:first-child {
-      padding-top: 1.5rem;
-    }
-
-    label {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-    }
-
-    .interval-selector {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-    }
-
-    #intervalbtn {
-      display: flex;
-      flex-direction: row;
-    }
-
-    .interval-selector {
-      text-align: center;
-      margin: 20px;
-    }
-
-    .interval-selector label {
-      margin: 10px;
-      display: inline-flex;
-      align-items: center;
-      font-size: 1.2rem;
-    }
-
-    .interval-selector input[type="radio"] {
-      position: relative;
-      margin-right: 8px;
-      width: 19px;
-      height: 19px;
-      border-radius: 50%;
-      border: 2px solid hsl(179 73% 67% / 1);
-      background-color: transparent;
-      -webkit-appearance: none;
-      -moz-appearance: none;
-      appearance: none;
-    }
-
-    .interval-selector input[type="radio"]:checked::before {
-      content: "";
-      position: absolute;
-      top: 3px;
-      left: 3px;
-      width: 10px;
-      height: 10px;
-      background-color: hsl(179 73% 67% / 1);
-      border-radius: 50%;
-    }
-
-    .interval-selector input[type="radio"]:focus {
-      outline: none;
-      box-shadow: 0 0 0 2px rgba(5, 143, 140, 0.5);
-    }
-
-  </style>
+  <title>Weather Information - Modern Weather App</title>
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/fontawesome.min.css') }}">
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 </head>
+
 <body>
   <div class="container">
-    <h2 class="center-align">Weather Information</h2>
-
-    <ul class="collection"  id="weather-grid">
-      {% if weather_info or weather_info1 or weather_info2 %}
-        <!-- Display data from weather_info -->
-        {% if weather_info %}
-          {% for source, data in weather_info.items() %}
-            <li class="collection-item" >
-
-                  <ul id="Address">
-                    {% if source == "OpenWeatherMap" %}
-                        <li><strong>City: &nbsp; </strong>{{ data.City }}</li>
-                        <li><strong>Country: &nbsp; </strong>{{ data.Country }}</li>
-                    {% endif %}
-                    {% if source == "Tomorrow.io" %}
-                        <li><strong>Coordinates: &nbsp; </strong>{{ data.Coordinates }}</li>
-                    {% endif %}
-                  </ul>
-
-              </li>
-          {% endfor %}
-        {% endif %}
-
-        <!-- Display data from weather_info1 -->
-        {% if weather_info1 %}
-          {% for source, data in weather_info1.items() %}
-            <li class="collection-item">
-                <ul>
-                    {% if source == "OpenWeatherMap" %}
-                        <li><strong>Weather: &nbsp; </strong>{{ data.Weather }}</li>
-                        <li>
-                          <img src="http://openweathermap.org/img/wn/{{ data.Weather_Icon }}@2x.png" 
-                               alt="Weather Icon" class="weather-icon" /> 
-                        </li>
-                        <li><strong>Temperature: &nbsp; </strong>{{ data.Temperature }}</li>
-                        <li><strong>Feels Like: &nbsp; </strong>{{ data['Feels Like'] }}</li>
-                        <li><strong>Min Temperature: &nbsp; </strong>{{ data['Min Temperature'] }}</li>
-                        <li><strong>Max Temperature: &nbsp; </strong>{{ data['Max Temperature'] }}</li>
-                        <ul>
-                          {% if data['Rain Volume'] %}
-                              <li><strong>Rain Volume: &nbsp; </strong>{{ data['Rain Volume'] }}</li>
-                          {% endif %}
-                          {% if data['Snow Volume'] %}
-                              <li><strong>Snow Volume: &nbsp; </strong>{{ data['Snow Volume'] }}</li>
-                          {% endif %}
-                        </ul>
-                      
-                        <li><strong>Visibility: &nbsp; </strong>{{ data.Visibility }}</li>
-                    {% endif %}
-                    {% if source == "Tomorrow.io" %}
-                        <li><strong>Humidity: &nbsp; </strong>{{ data.Humidity }}</li>
-                        <li><strong>Pressure: &nbsp; </strong>{{ data.Pressure }}</li>
-                        <li><strong>Wind Speed: &nbsp; </strong>{{ data['Wind Speed'] }}</li>
-                        <li><strong>Wind Gust: &nbsp; </strong>{{ data['Wind Gust'] }}</li>
-                        <li><strong>Wind Direction: &nbsp; </strong>{{ data['Wind Direction'] }}</li>
-                        <li><strong>Cloud Base: &nbsp; </strong>{{ data['Cloud Base'] }}</li>
-                        <li><strong>Cloud Ceiling: &nbsp; </strong>{{ data['Cloud Ceiling'] }}</li>
-                        <li><strong>Cloudiness: &nbsp; </strong>{{ data.Cloudiness }}</li>
-                        <li><strong>Dew Point: &nbsp; </strong>{{ data['Dew Point'] }}</li>
-                        <li><strong>UV Index: &nbsp; </strong>{{ data['UV Index'] }}</li>
-                        <li><strong>UV Health Concern: &nbsp; </strong>{{ data['UV Health Concern'] }}</li>
-                    {% endif %}
-                </ul>
-            </li>
-          {% endfor %}
-        {% endif %}
-
-        <!-- Display data from weather_info2 -->
-        {% if weather_info2 %}
-          {% for source, data in weather_info2.items() %}
-            <li class="collection-item">
-                <ul>
-                    {% if source == "OpenWeatherMap" %}
-                        <li><strong>Sunrise: &nbsp; </strong>{{ data.Sunrise }}</li>
-                        <li><strong>Sunset: &nbsp; </strong>{{ data.Sunset }}</li>
-                        <li><strong>Current Local Time: &nbsp; </strong>{{ data['Current Local Time'] }}</li>
-                    {% endif %}
-                </ul>
-            </li>
-          {% endfor %}
-        {% endif %}
-
-      {% else %}
-        <li class="collection-item">
-          <strong>No weather information available.</strong>
-        </li>
-      {% endif %}
-    </ul>
-
-    <div class="center-align">
-      <a href="/" class="btn waves-effect waves-light">Back</a>
+    <div class="header">
+      <h1>🌤️ Weather Information</h1>
     </div>
-  </div>
 
-  <div class="interval-selector">
-    <form id="forecastForm" method="post" action="/forecast">
-      <input type="hidden" name="lat" value="{{ lat }}" />
-      <input type="hidden" name="lon" value="{{ lon }}" />
-      <div id="intervalbtn">
-        <label>
-          <input type="radio" name="interval" value="hourly" checked /> Hourly (upto 6 days)
-        </label>
-        <label>
-          <input type="radio" name="interval" value="minutely" /> Minutely (upto 1 hr)
-        </label>
+    {% if weather_info or weather_info1 or weather_info2 %}
+    <div class="main-weather">
+      <div class="location-info">
+        <div class="location-details">
+          {% if weather_info %}
+          {% for source, data in weather_info.items() %}
+          {% if source == "OpenWeatherMap" %}
+          <h2>📍 {{ data.City }}, {{ data.Country }}</h2>
+          {% endif %}
+          {% if source == "Tomorrow.io" %}
+          <p>{{ data.Coordinates }}</p>
+          {% endif %}
+          {% endfor %}
+          {% endif %}
+        </div>
+        <div class="current-time">
+          {% if weather_info2 %}
+          {% for source, data in weather_info2.items() %}
+          {% if source == "OpenWeatherMap" %}
+          <p><strong>🕒 Current Time</strong></p>
+          <p>{{ data['Current Local Time'] }}</p>
+          {% endif %}
+          {% endfor %}
+          {% endif %}
+        </div>
       </div>
-      <div class="center-align">
-        <button type="submit" id="fc" class="btn waves-effect waves-light">
-          Get Forecast
-        </button>
+
+      <div class="weather-main">
+        {% if weather_info1 %}
+        {% for source, data in weather_info1.items() %}
+        {% if source == "OpenWeatherMap" %}
+        <div class="weather-icon">
+          <img src="http://openweathermap.org/img/wn/{{ data.Weather_Icon }}@4x.png" alt="Weather Icon" />
+        </div>
+        <div class="weather-info">
+          <div class="weather-description">{{ data.Weather }}</div>
+          <div class="temperature">{{ data.Temperature }}</div>
+          <div class="feels-like">Feels like {{ data['Feels Like'] }}</div>
+        </div>
+        <div class="temp-range">
+          <div class="temp-item">
+            <h4>Min</h4>
+            <span>{{ data['Min Temperature'] }}</span>
+          </div>
+          <div class="temp-item">
+            <h4>Max</h4>
+            <span>{{ data['Max Temperature'] }}</span>
+          </div>
+        </div>
+        {% endif %}
+        {% endfor %}
+        {% endif %}
+      </div>
+    </div>
+
+    <div class="weather-details">
+      {% if weather_info1 %}
+      <div class="detail-card">
+        <h3>📍 Environmental Conditions</h3>
+        <div class="detail-grid">
+          {% for source, data in weather_info1.items() %}
+          {% if source == "OpenWeatherMap" %}
+          <div class="detail-item">
+            <div class="label"><i class="fas fa-eye"></i> Visibility</div>
+            <div class="value">{{ data.Visibility }}</div>
+          </div>
+          {% if data['Sea Level Pressure'] %}
+          <div class="detail-item">
+            <div class="label"><i class="fas fa-tachometer-alt"></i> Pressure at Sea Level</div>
+            <div class="value">{{ data['Sea Level Pressure'] }}</div>
+          </div>
+          {% endif %}
+          {% if data['Ground Level Pressure'] %}
+          <div class="detail-item">
+            <div class="label"><i class="fas fa-compress-arrows-alt"></i> Pressure at Ground Level</div>
+            <div class="value">{{ data['Ground Level Pressure'] }}</div>
+          </div>
+          {% endif %}
+          {% endif %}
+          {% if source == "Tomorrow.io" %}
+          <div class="detail-item">
+            <div class="label"><i class="fas fa-tachometer-alt"></i> Overall Pressure</div>
+            <div class="value">{{ data.Pressure }}</div>
+          </div>
+          <div class="detail-item">
+            <div class="label"><i class="fas fa-tint"></i> Humidity</div>
+            <div class="value">{{ data.Humidity }}</div>
+          </div>
+          <div class="detail-item">
+            <div class="label"><i class="fas fa-thermometer-half"></i> Dew Point</div>
+            <div class="value">{{ data['Dew Point'] }}</div>
+          </div>
+          {% endif %}
+          {% endfor %}
+        </div>
+      </div>
+
+      <div class="detail-card">
+        <h3>💨 Wind Details</h3>
+        <div class="detail-grid">
+          {% for source, data in weather_info1.items() %}
+          {% if source == "Tomorrow.io" %}
+          <div class="detail-item">
+            <div class="label"><i class="fas fa-wind"></i> Wind Speed</div>
+            <div class="value">{{ data['Wind Speed'] }}</div>
+          </div>
+          <div class="detail-item">
+            <div class="label"><i class="fa-solid fa-hurricane"></i> Wind Gust</div>
+            <div class="value">{{ data['Wind Gust'] }}</div>
+          </div>
+          <div class="detail-item">
+            <div class="label"><i class="fas fa-compass"></i> Wind Direction</div>
+            <div class="value">{{ data['Wind Direction'] }}</div>
+          </div>
+          {% endif %}
+          {% endfor %}
+        </div>
+      </div>
+
+      <div class="detail-card">
+        <h3>☁️ Cloud Coverage</h3>
+        <div class="detail-grid">
+          {% for source, data in weather_info1.items() %}
+          {% if source == "Tomorrow.io" %}
+          <div class="detail-item">
+            <div class="label"><i class="fas fa-cloud"></i> Cloudiness</div>
+            <div class="value">{{ data.Cloudiness }}</div>
+          </div>
+          <div class="detail-item">
+            <div class="label"><i class="fas fa-cloud-meatball"></i> Cloud Base</div>
+            <div class="value">{{ data['Cloud Base'] }}</div>
+          </div>
+          <div class="detail-item">
+            <div class="label"><i class="fas fa-cloud-rain"></i> Cloud Ceiling</div>
+            <div class="value">{{ data['Cloud Ceiling'] }}</div>
+          </div>
+          {% endif %}
+          {% endfor %}
+        </div>
+      </div>
+
+      <div class="detail-card">
+        <h3>☀️ UV Index</h3>
+        <div class="detail-grid">
+          {% for source, data in weather_info1.items() %}
+          {% if source == "Tomorrow.io" %}
+          <div class="detail-item">
+            <div class="label"><i class="fas fa-sun"></i> UV Index</div>
+            <div class="value">{{ data['UV Index'] }}</div>
+          </div>
+          <div class="detail-item">
+            <div class="label"><i class="fas fa-shield-alt"></i> UV Health Concern</div>
+            <div class="value">{{ data['UV Health Concern'] }}</div>
+          </div>
+          {% endif %}
+          {% endfor %}
+        </div>
+      </div>
+      {% endif %}
+    </div>
+
+    {% if weather_info2 %}
+    {% for source, data in weather_info2.items() %}
+    {% if source == "OpenWeatherMap" %}
+    <div class="sun-times">
+      <h3>☀️ Sun Times</h3>
+      <div class="sun-info">
+        <div class="sun-item">
+          <div class="icon">🌅</div>
+          <div class="time">{{ data.Sunrise }}</div>
+          <div class="label">Sunrise</div>
+        </div>
+        <div class="sun-item">
+          <div class="icon">🌇</div>
+          <div class="time">{{ data.Sunset }}</div>
+          <div class="label">Sunset</div>
+        </div>
+      </div>
+    </div>
+    {% endif %}
+    {% endfor %}
+    {% endif %}
+
+    <div class="forecast-section">
+      <h3>📊 Weather Forecast</h3>
+      <form id="forecastForm" method="post" action="/forecast" target="_blank">
+        <input type="hidden" name="lat" value="{{ lat }}" />
+        <input type="hidden" name="lon" value="{{ lon }}" />
+
+        <div class="interval-selector">
+          <div class="radio-group">
+            <input type="radio" name="interval" value="hourly" id="hourly" checked />
+            <label for="hourly">
+              <i class="fas fa-chart-line"></i> Hourly (up to 6 days)
+            </label>
+          </div>
+          <div class="radio-group">
+            <input type="radio" name="interval" value="minutely" id="minutely" />
+            <label for="minutely">
+              <i class="fas fa-clock"></i> Minutely (up to 1 hour)
+            </label>
+          </div>
+        </div>
+
+        <div class="action-buttons">
+          <button type="submit" class="btn btn-primary">
+            📊 Get Detailed Forecast
+          </button>
+          <a href="/" class="btn btn-secondary">
+            🏠 Back to Home
+          </a>
+        </div>
       </form>
     </div>
 
-    <!-- Import Materialize JavaScript -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-  </body>
+    {% else %}
+    <div class="main-weather">
+      <div class="weather-main" style="text-align: center;">
+        <div>
+          <h2>❌ No Weather Data Available</h2>
+          <p style="color: var(--text-secondary); margin-top: 1rem;">
+            Unable to retrieve weather information for the requested location.
+          </p>
+        </div>
+      </div>
+      <div class="action-buttons" style="margin-top: 2rem;">
+        <a href="/" class="btn btn-secondary">
+          🏠 Back to Home
+        </a>
+      </div>
+    </div>
+    {% endif %}
+  </div>
+
+  <script src="{{ url_for('static', filename='js/main.js') }}"></script>
+
+</body>
+
 </html>
